<resources>
    <string name="app_name">TIM-Example-Android</string>

    <!-- fragment_login -->
    <string name="fragment_login_text_view_password">Login with password</string>
    <string name="fragment_login_biometric_failed">Biometric failed</string>
    <string name="fragment_login_biometric_invalid">Biometric was changed and is therefore invalid, login again</string>
    <string name="fragment_login_biometric_unrecoverable_invalid">Biometric is in a unrecoverable state</string>
    <string name="fragment_login_wrong_password">Wrong password</string>
    <string name="fragment_login_key_server_error">Cannot reach the key server, do you have internet?</string>
    <string name="fragment_login_key_locked">Too many attempts, you have been locked out</string>
    <string name="fragment_login_generic_error">An error occurred</string>

    <!-- fragment_create_new_pin_code -->
    <string name="fragment_create_new_pin_code">New user</string>
    <string name="fragment_create_new_pin_code_text_view_new_user">New user</string>
    <string name="fragment_create_new_pin_code_text_view_password">New user</string>
    <string name="fragment_create_new_pin_code_text_input_layout_user_name">Type in name for user</string>
    <string name="fragment_create_new_pin_code_text_input_layout_user_pin">Type in a new PIN (at least 4 numbers)</string>
    <string name="fragment_create_new_pin_code_button_save">Save</string>
    <string name="fragment_create_new_pin_code_no_refresh_token">No refresh token</string>
    <string name="fragment_create_new_pin_code_could_not_store_refresh_token">Could not store refresh token</string>

    <!-- fragment_welcome -->
    <string name="fragment_welcome">TIM Example</string>
    <string name="fragment_welcome_text_view_login">Login</string>
    <string name="button_login">New user on this device</string>

    <!-- fragment_login -->
    <string name="fragment_login">Login</string>
    <string name="fragment_login_text_input_layout_user_pin">PIN</string>
    <string name="fragment_login_button_login">Login</string>

    <!-- fragment_authenticated -->
    <string name="fragment_authenticated">Authenticated</string>
    <string name="fragment_authenticated_text_view_user_name">Hello %1</string>
    <string name="fragment_authenticated_message">You have successfully logged in with either PIN code or Biometric ID! 🥳</string>
    <string name="fragment_authenticated_text_view_active_tokens">Active tokens</string>
    <string name="fragment_authenticated_button_access_token">Access Token </string>
    <string name="fragment_authenticated_button_refresh_token">Refresh Token </string>
    <string name="fragment_authenticated_text_view_biometric_settings">Biometric settings</string>
    <string name="fragment_authenticated_text_view_biometric_enabled">The user has biometric authentication enabled</string>
    <string name="fragment_authenticated_text_view_biometric_available_not_configured">Biometric login is not enabled, enable it now.</string>
    <string name="fragment_authenticated_text_view_biometric_not_available">Biometric login is not available on this device.</string>
    <string name="fragment_authenticated_button_biometric_settings">Enable biometric authentication</string>
    <string name="fragment_authenticated_text_view_user_data">User data</string>
    <string name="fragment_authenticated_text_view_user_id">UserId %1</string>

    <string name="fragment_authenticated_text_view_exit">Exit</string>
    <string name="fragment_authenticated_button_log_out">🚪 Log out</string>
    <string name="fragment_authenticated_button_delete_user">❗ Delete user from this device</string>

    <!-- fragment_token -->
    <string name="fragment_token_text_view_title_refresh_token">Refresh Token</string>
    <string name="fragment_token_text_view_title_access_token">Access Token</string>
    <string name="fragment_token_text_view_expiration_title">Expiration</string>
    <string name="fragment_token_text_view_token_title">Token</string>

    <!-- fragment biometric settings -->
    <string name="fragment_biometric_settings_text_view_title">Biometric login</string>
    <string name="fragment_biometric_settings_text_view_subtitle">Would you like to enable biometric authentication for your user?</string>
    <string name="fragment_biometric_settings_button_enable">Enable biometric authentication</string>
    <string name="fragment_biometric_settings_button_skip">I don\'t want to enable biometric authentication</string>

    <string name="fragment_biometric_text_input_layout_pin_code">Pin code</string>

    <string name="fragment_biometric_settings_text_view_not_setup_subtitle">You have not configured biometric authentication yet, would you like to configure it?</string>
    <string name="fragment_biometric_settings_button_not_setup_enroll">Yes let me setup biometric authentication</string>
    <string name="fragment_biometric_settings_button_not_setup_close">No thanks close this</string>

    <string name="fragment_biometric_settings_text_view_unavailable_subtitle">Your device does not support biometric authentication.</string>
    <string name="fragment_biometric_settings_button_unavailable_close">Alright, let\'s lets close this</string>

    <string name="fragment_biometric_settings_toast_error">An error occurred</string>

    <!-- biometric authentication prompt -->
    <string name="biometric_util_title">Title</string>
    <string name="biometric_util_subtitle">Subtitle</string>
    <string name="biometric_util_description">Description</string>
    <string name="biometric_util_negativeButtonText">NegativeButtonText</string>

    <!-- logout dialog fragment -->
    <string name="dialog_fragment_title">Your access has expired!</string>
    <string name="dialog_fragment_message">You will be logged out</string>
    <string name="dialog_fragment_ok">OK</string>

</resources>