<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/text_view_title"
        style="?attr/textAppearanceHeadline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_biometric_settings_text_view_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_biometric_available"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="text_view_available_subtitle,button_available_enable,button_available_skip"/>

    <TextView
        android:id="@+id/text_view_available_subtitle"
        style="?textAppearanceBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_biometric_settings_text_view_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title" />

    <Button
        android:id="@+id/button_available_enable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_biometric_settings_button_enable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_available_subtitle" />

    <Button
        android:id="@+id/button_available_skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_biometric_settings_button_skip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_available_enable" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_biometric_unavailable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="text_view_unavailable_subtitle,button_unavailable_close"/>

    <TextView
        android:id="@+id/text_view_unavailable_subtitle"
        style="?textAppearanceBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_biometric_settings_text_view_unavailable_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title" />

    <Button
        android:id="@+id/button_unavailable_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_biometric_settings_button_unavailable_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_unavailable_subtitle" />


</androidx.constraintlayout.widget.ConstraintLayout>